--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,8 @@
   --color-modal-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   --color-modal-btn: #000000;
+  --color-modal-input: #000000;
+
   --color-modal-btn-border: rgba(0, 0, 0, 0.1);
 
   /* -------------- Шрифти сайту --------------------- */
@@ -658,7 +660,10 @@ img {
   color: var(--color-text-contacts);
 }
 
-.footer-join-text {
+.footer-join-title,
+.footer-form-title {
+  margin-bottom: 20px;
+
   font-weight: 700;
   line-height: 16px;
   text-transform: uppercase;
@@ -669,7 +674,6 @@ img {
 .footer-socials-list {
   display: flex;
   width: 206px;
-  margin-top: 20px;
   justify-content: center;
   align-items: center;
 }
@@ -698,6 +702,69 @@ img {
 }
 
 .footer-socials-icon {
+  fill: currentColor;
+}
+
+/* =================== footer-form ======================== */
+
+.footer-form-thumb {
+  margin-left: auto;
+}
+
+.footer-form {
+  display: flex;
+  align-items: center;
+}
+
+.footer-form-input {
+  width: 358px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 15px;
+
+  font-size: 16px;
+  line-height: 1.25;
+
+  color: var(--color-text-contacts);
+
+  background-color: var(--color-background-footer);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  filter: drop-shadow(var(--color-button-hero-shadow));
+}
+
+.footer-form-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-left: 12px;
+  padding: 10px 28px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  color: var(--color-button-hero-text);
+
+  background: var(--color-button-hero-background);
+  box-shadow: var(--color-button-hero-shadow);
+
+  /* ????????????? не прописане в формі ???????????????? */
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+  background-color: var(--color-button-hero-background-focus);
+}
+
+/* ????????????? /не прописане в формі ???????????????? */
+
+.footer-form-btn-icon {
+  margin-left: 10px;
   fill: currentColor;
 }
 
@@ -730,7 +797,7 @@ img {
   top: 50%;
   left: 50%;
   width: 528px;
-  height: 581px;
+  padding: 40px;
 
   background-color: var(--color-background-primary);
 
@@ -738,10 +805,11 @@ img {
   border-radius: 4px;
 
   transform: translate(-50%, -50%) scale(1);
+
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-close {
+.modal-btn-close {
   position: absolute;
   right: 8px;
   top: 8px;
@@ -751,18 +819,197 @@ img {
   align-items: center;
   width: 30px;
   height: 30px;
+  padding: 0;
   border-radius: 50%;
 
-  color: var(--color-modal-btn);
+  color: var(--color-modal-input);
   background-color: var(--color-background-primary);
   border: 1px solid var(--color-modal-btn-border);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn-close-icon {
   fill: currentColor;
 }
 
-.button-close:hover,
-.button-close:focus {
+.modal-btn-close:hover,
+.modal-btn-close:focus {
   color: var(--color-accent);
+}
+
+/* ================= form =================== */
+
+.modal-title {
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+
+  color: var(--color-text-title);
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-label {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: var(--color-text-main);
+}
+
+/* --------- одне з двох --------- */
+
+/* .modal-form-label {
+  margin-bottom: 10px;
+} */
+
+.modal-form-label:nth-child(-n + 3) {
+  margin-bottom: 10px;
+}
+
+/* -------------------------------- */
+
+.input-thumb {
+  position: relative;
+  margin-top: 4px;
+}
+
+.modal-input {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 42px;
+
+  font-size: 16px;
+  color: var(--color-modal-input);
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-icon {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-left: 12px;
+  transform: translateY(-50%);
+
+  fill: var(--color-text-title);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border: 1px solid var(--color-accent);
+  outline: none;
+}
+
+.modal-input:focus + .input-icon {
+  fill: var(--color-accent);
+}
+
+.modal-form-label.label-comment {
+  margin-bottom: 20px;
+}
+
+.modal-input-textarea {
+  height: 120px;
+  padding-top: 12px;
+  padding-left: 16px;
+  resize: none;
+
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: var(--color-modal-input);
+}
+
+.modal-input-textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+/* --------------- check-box -------------- */
+
+.modal-form-label.label-checkbox {
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 30px;
+
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  cursor: pointer;
+}
+
+.modal-input-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+}
+
+.modal-input-checkbox-icon {
+  margin-right: 8px;
+  margin-left: 13px;
+  fill: var(--color-button-hero-text);
+  border: 2px solid var(--color-text-title);
+  border-radius: 2px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-width 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-checkbox:checked + .modal-input-checkbox-icon {
+  background-color: var(--color-accent);
+  border-width: 0;
+}
+
+.modal-link-agreement {
+  margin-left: 0.5em;
+  color: var(--color-accent);
+}
+/* ------------------------------------------- */
+
+.modal-btn {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 52px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  color: var(--color-button-hero-text);
+
+  background: var(--color-accent);
+  box-shadow: 0px 4px 4px var(--color-button-hero-shadow);
+  border-radius: 4px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: var(--color-button-hero-background-focus);
 }
