--- a/css/styles.css
+++ b/css/styles.css
@@ -975,8 +975,13 @@ img {
   border: 2px solid var(--color-text-title);
   border-radius: 2px;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-width 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-checkbox:focus + .modal-input-checkbox-icon {
+  border: 2px solid var(--color-accent);
 }
 
 .modal-input-checkbox:checked + .modal-input-checkbox-icon {
