Update form checkbox in modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -797,6 +797,7 @@ img {
   top: 50%;
   left: 50%;
   width: 528px;
+  height: 581px;
   padding: 40px;
 
   background-color: var(--color-background-primary);
@@ -914,11 +915,13 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-input:hover,
 .modal-input:focus {
   border: 1px solid var(--color-accent);
   outline: none;
 }
 
+.modal-input:hover + .input-icon,
 .modal-input:focus + .input-icon {
   fill: var(--color-accent);
 }
@@ -929,6 +932,7 @@ img {
 
 .modal-input-textarea {
   height: 120px;
+  margin-top: 4px;
   padding-top: 12px;
   padding-left: 16px;
   resize: none;
@@ -947,7 +951,6 @@ img {
 /* --------------- check-box -------------- */
 
 .modal-form-label.label-checkbox {
-  flex-direction: row;
   align-items: center;
   margin-bottom: 30px;
 
@@ -968,9 +971,17 @@ img {
   clip: rect(0 0 0 0);
 }
 
+.modal-input-checkbox-text {
+  position: relative;
+  padding-left: 8px;
+}
+
 .modal-input-checkbox-icon {
-  margin-right: 8px;
-  margin-left: 13px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(-100%, -50%);
+
   fill: var(--color-button-hero-text);
   border: 2px solid var(--color-text-title);
   border-radius: 2px;
@@ -980,6 +991,7 @@ img {
     border-width 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-input-checkbox-text:hover .modal-input-checkbox-icon,
 .modal-input-checkbox:focus + .modal-input-checkbox-icon {
   border: 2px solid var(--color-accent);
 }
@@ -990,7 +1002,6 @@ img {
 }
 
 .modal-link-agreement {
-  margin-left: 0.5em;
   color: var(--color-accent);
 }
 
