--- a/css/styles.css
+++ b/css/styles.css
@@ -951,8 +951,13 @@ img {
 /* --------------- check-box -------------- */
 
 .modal-form-label.label-checkbox {
-  align-items: center;
+  position: relative;
+  flex-direction: row;
+  width: fit-content;
+  margin-inline: auto;
   margin-bottom: 30px;
+
+  padding-left: 8px;
 
   font-size: 14px;
   line-height: 1.71;
@@ -971,11 +976,6 @@ img {
   clip: rect(0 0 0 0);
 }
 
-.modal-input-checkbox-text {
-  position: relative;
-  padding-left: 8px;
-}
-
 .modal-input-checkbox-icon {
   position: absolute;
   top: 50%;
@@ -991,7 +991,7 @@ img {
     border-width 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input-checkbox-text:hover .modal-input-checkbox-icon,
+.modal-input-checkbox:hover + .modal-input-checkbox-icon,
 .modal-input-checkbox:focus + .modal-input-checkbox-icon {
   border: 2px solid var(--color-accent);
 }
@@ -1002,6 +1002,7 @@ img {
 }
 
 .modal-link-agreement {
+  margin-left: 0.3em;
   color: var(--color-accent);
 }
 
